--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 0.6.2 (trunk):
 * Fix the Mirage tests to the Mirage 2.0.1+ Conduit interfaces.
-* Add sexp convertors for `Conduit_lwt_unix.ctx`
+* Add sexp convertors for `Conduit_lwt_unix.ctx` and `Conduit_mirage.ctx`
 
 0.6.1 (2014-11-07):
 * When terminating conduits, always close the output channel first before
