--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-0.7.0 (trunk):
+0.7.0 (2014-12-04):
 * Add Lwt-unix support for the native OCaml/TLS stack as an alternative
   to OpenSSL. This can be activated by setting the `CONDUIT_TLS` environment
   variable to `native`.  If this is not set and OpenSSL is available, then
@@ -6,6 +6,10 @@
 * Add sexp convertors for `Conduit_lwt_unix.ctx` and `Conduit_mirage.ctx`
   and the `Resolver` service types.
 * Fix the Mirage tests to the Mirage 2.0.1+ Conduit interfaces.
+* *Interface breaking:* The `client` and `server` types in `Conduit_lwt_unix`
+  now explicitly label the fields of the tuples with a polymorphic variant.
+  This allows them to remain independent of this library but still be
+  more self-descriptive (i.e. `Port of int` instead of just `int`).
 
 0.6.1 (2014-11-07):
 * When terminating conduits, always close the output channel first before
