--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.7.1 (trunk):
+* Do not emit debug output when the `CONDUIT_DEBUG` variable is not set.
+
 0.7.0 (2014-12-04):
 * Add Lwt-unix support for the native OCaml/TLS stack as an alternative
   to OpenSSL. This can be activated by setting the `CONDUIT_TLS` environment
