--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.8.1 (2015-04-17):
+* Support Async_SSL version 112.24.00 and higher.
+* Add a TLS echo server in `tests/async/`
+
 0.8.0 (2015-03-27):
 * Add TLS client support for Mirage (#50)
 * Do not overwrite the default name resolver for Mirage (#49)
