--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.8.7 (trunk)
+* Do not ignore custom context when calling `Conduit_lwt_unix_ssl.accept`
+  (reported by @jrb467 in #88)
+
 0.8.6 (2015-07-14)
 * Add a `Conduit_mirage.Context`, a functor for creating HTTP(s) conduit
   contexts (with a DNS resolver).
