--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+0.10.0 (2015-12-25):
+* Add support for CA certificates in [Conduit_async.serve] (#98).
+* Fix file descriptor leak in Lwt backend (#101 from @hannesm).
+* Server in `Conduit_lwt_tls` waits for a user callback to finish
+  before accepting more connections. Instead, it should only wait
+  until the connection is accepted and detach client callback (#97).
+* Close socket when `ssl_accept` fails, e.g. when cipher negotiation
+  mismatch (#104).
+
 0.9.0 (2015-10-14):
 * Add a `Launchd` argument for the Conduit_lwt_unix server listener 
   to support the MacOSX service launcher (#96).
