--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 * Add multi-distro Travis testing script.
 * Switch to using `pa_sexp_conv` for latest sexp.
+* Fix `vchan` example code, and use functoria-style mirage
+  for it (#108 via @jonludlam)
 
 0.10.0 (2015-12-25):
 * Add support for CA certificates in [Conduit_async.serve] (#98).
