--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
+0.11.0 (trunk):
+* Minimum OCaml version is now 4.02.3
 * Add multi-distro Travis testing script.
 * Switch to using `pa_sexp_conv` for latest sexp.
+* Support Core/Async >=113.24
 * Fix `vchan` example code, and use functoria-style mirage
   for it (#108 via @jonludlam)
 
