--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,8 @@
 * Support Core/Async >=113.24
 * Fix `vchan` example code, and use functoria-style mirage
   for it (#108 via @jonludlam)
+* [async] Add an `Ssl_unsupported exception` for Async rather than
+  just raising `Failure`
 
 0.10.0 (2015-12-25):
 * Add support for CA certificates in [Conduit_async.serve] (#98).
