--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.12.0 (trunk):
+* Convert build system to use PPX instead of Camlp4.
+
 0.11.0 (2016-03-25):
 * Minimum OCaml version is now 4.02.0
 * Add multi-distro Travis testing script.
