--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.14.2 (2017-01-01)
+* Fix discover.ml (#191)
+
 0.14.1 (2016-12-29)
 * Tests: do not link with lwt.ssl if it is not installed (#186)
 
