--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.14.4 (2017-01-03)
+* Fix tests (#195)
+
 0.14.3 (2017-01-03)
 * Fix mirage-conduit (@samoht, #188)
 * Use ppx_driver's ocamlbuild plugin (@rgrinberg, #193)
