--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.15.0 (2017-????)
+* support MirageOS 3, and drop support for earlier versions (#203, #202)
+
 0.14.4 (2017-01-03)
 * Fix tests (#195)
 
