--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.15.1 (2017-04-25)
+* Lwt: Lwt 3.0 support (#214)
+* Async: with_connection (#211)
+
 0.15.0 (2017-02-23)
 * support MirageOS 3, and drop support for earlier versions (#203, #202)
 
