--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.15.4 (2017-05-31)
+* Lwt: Fix meta file and building  with lwt_ssl (#222, @dkim)
+
 0.15.3 (2017-05-04)
 * Lwt: lwt 3.0 support for the tls backend too (#219, @@rgrinberg)
 
